<!--<resources >original one-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- General -->
    <string name="app_name">UniGram</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <!-- Login Screen -->
    <string name="dummy_data_flag">(Dummy Data mode : On)</string>
    <string name="login_button_text">Login</string>

    <!-- Navigation Bar -->
    <string name="title_activity_navigation_bar">UniGram</string>
    <string name="title_user_feed">User Feed</string>
    <string name="title_discover">Discover</string>
    <string name="title_camera">Camera</string>
    <string name="title_activity_feed">Activity Feed</string>
    <string name="title_profile">Profile</string>

    <!-- Activity Feed -->
    <string name="activity_you_header_text">My likes.</string>

    <!-- Discover -->
    <string name="discover_header_text">Suggested users.</string>
    <string name="search_hint">Search user...</string>

    <!-- Testing placeholder text -->
    <string name="hello_user_feed_fragment">Hello User Feed fragment</string>
    <string name="hello_discover_fragment">Hello Discover fragment</string>
    <string name="hello_camera_fragment">Hello Camera fragment</string>
    <string name="hello_activity_following_fragment">Hello Activity Following fragment</string>
    <string name="hello_activity_you_fragment">Hello Activity You fragment</string>
    <string name="hello_profile_fragment">Hello Profile fragment</string>
    <string name="camerabuttom">cameraphoto</string>
    <string name="title_activity_publish">PublishActivity</string>

    <!-- Post -->
    <string name="icon_heart">&#x2665;</string>
    <string name="default_username">Username</string>
    <string name="default_location">Location</string>
    <string name="default_timeSince">TimeSince</string>
    <string name="default_comment">Comment</string>
    <string name="default_load_more_comments">Load more comments</string>
    <string name="comment_hint">Add a comment...</string>
    <string name="default_load_more_likes">Load more likes</string>
    <string name="default_prof_name">Profile Name</string>

    <!-- Profile -->
    <string name="profile_post_count_label">posts</string>
    <string name="profile_follower_count_label">followers</string>
    <string name="profile_following_count_label">following</string>
    <string name="profile_no_post_flag">No posts</string>
    <string name="private_profile">This user is private.</string>
    <string name="restricted_profile">Restricted access to profile.</string>

    <!-- Swipe to send -->
    <string name="swipe_to_send_header">Send post to...</string>
    <string name="swipe_tag">Swiped from Username</string>

    <!-- Testing-->
    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">Scanning in range Unigramers</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect to a device (Secure)</string>
    <string name="insecure_connect">Connect a device (Insecure)</string>
    <string name="discoverable">Make device discoverable</string>

</resources>
