<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.example.junjen.mobileinstagram.NavigationBar">
    <item android:id="@+id/action_logout" android:title="@string/action_logout"
        android:orderInCategory="100" app:showAsAction="never"/>

    <item android:id="@+id/action_swipe" android:title="@string/action_swipe"
        android:orderInCategory="99" app:showAsAction="never"/>

    <!-- Test bluetooth-->
    <item
        android:id="@+id/secure_connect_scan"

        android:title="@string/secure_connect"/>

    <item
        android:id="@+id/insecure_connect_scan"

        android:title="@string/insecure_connect"/>

    <item
        android:id="@+id/discoverable"

        android:title="@string/discoverable"/>




</menu>
